Fixes nms descript spacing

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -9,26 +9,24 @@
   <script src="sketch.js"></script>
 
   <div id="sketch-container">
+    <input type = "button" id = "backButton" onClick="parent.location='../index.html'" value='Back'>
+
     <table id = "table">
       <tr id = "row1"> <!--table row -->
         <td>
-          <input type = "button" id = "backButton" onClick="parent.location='../index.html'" value='Back'>
-
           <a href="https://wsprung.github.io/whitneysArchive/CarilynsCareArticle.pdf">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon.png" id = "articleIcon">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/ccDescript.png" id = "ccDescript">
          </a>
         </td> <!--table data -->
         <td>
-          <a href="">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hackathonDescriptIcon.png" id = "nmsIcondDescript">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon-01.png"  id = "awardIcon">
+          <a href="https://www.nationalmerit.org/s/1758/interior.aspx?sid=1758&gid=2&pgid=424">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png"  id = "awardIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/nmsAwardDescript.png" id = "nmsIconDescript">
          </a>
         </td>
         <td>
-          <!-- <a href="https://wsprung.github.io/whitneysArchive/website/myWork/Reflections/PressFitReflection.html" id = "articleIconLight"> -->
          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon2.png" id = "articleIconLight">
-         <!-- </a> -->
          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/testScoresDescript.png" id = "testScoresDescript">
         </td> <!--table data -->
       </tr>
