Creates flowersDescript.png

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -61,9 +61,8 @@
          </a>
         </td>
         <td>
-          <a href="" id = "articleIcon3">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
-         </a>
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png" id = "articleIcon3">
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/reportCardExcerpt.png" id = "reportCardExcerpt">
         </td>
         <td>
           <a href= "https://wsprung.github.io/whitneysArchive/website/myAccolades/alzheimersHackathon/alzheimersHackathon.html">
