Creates resumeIcon, edits aboutMe

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -36,6 +36,20 @@
         family. My favorite places on earth are Casco, Maine and Providence, Rhode Island where my mom and grandparents grew
         up. I created this website as an archive of myself and as a way to learn more about me. I hope you enjoy!</p>
         <hr id = "hr1">
+        <blockquote id = "reportCardExcerpt">
+          <p>Report card comment excerpt from my 12th grade computer
+science teacher: “Your love for learning and programming
+is obvious, and you embody the hacker
+mindset (in the best way!). You tackle every
+problem I present to the class with absolute relish,
+from challenge homework problems to the command line practical
+that you handled with aplomb. Reading
+the comments and extensive notes throughout  your code tells me
+that you really want to understand how programs work. You are
+ambitious and creative in your programming projects...Keep
+up the exceptional work.”
+</p>
+        </blockquote>
     <div id = "formatDogs">
       <img src="https://wsprung.github.io/whitneysArchive/website/assets/dogs.jpg" id = "dogs" alt="My dogs">
       <p id = doggyP>These are my dogs Rusty and Ruggles! Rusty is a cockapoo, Ruggles is a
@@ -55,7 +69,7 @@
         <h3 id = "facts">&emsp; <span id = "numbering">1</span> &ensp; My favorite coding language (slightly biased to the ones I have been exposed to): <em>Java</em></h3>
         <h3 id = "facts">&emsp; <span id = "numbering">2</span> &ensp; Currently my favorite show is <em>Bojack Horseman</em></h3>
         <h3 id = "facts">&emsp; <span id = "numbering">3</span> &ensp; Currently my favorite book is <em>Circe by Madeline Miller</em></h3>
-        <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, cook, and have existential crises</em></h3>
+        <h3 id = "facts">&emsp; <span id = "numbering">4</span> &ensp; In my free time I like to... <em>bike, hike, code, spend time with family and friends, cook, and workout</em></h3>
       </div>
       <hr id = "hr1">
     </div>
