--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -61,6 +61,7 @@
          </a>
         </td>
         <td>
+          <!-- <iframe src="https://docs.google.com/document/d/e/2PACX-1vTmHRtoPur65J76jAjdJNRHJ2ANLVTPNhMUHMEb5mzzW6EkJm3xvsjEei8Fk9HWmjFYSHuIC7sAxysk/pub?embedded=true"></iframe> -->
           <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png" id = "articleIcon3">
           <img src = "https://wsprung.github.io/whitneysArchive/website/assets/reportCardExcerpt.png" id = "reportCardExcerpt">
         </td>
