Adds resume.html and edits aboutMe

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -36,9 +36,19 @@
         family. My favorite places on earth are Casco, Maine and Providence, Rhode Island where my mom and grandparents grew
         up. I created this website as an archive of myself and as a way to learn more about me. I hope you enjoy!</p>
         <hr id = "hr1">
-        <blockquote id = "reportCardExcerpt">
-          <p>Report card comment excerpt from my 12th grade computer
-science teacher: “Your love for learning and programming
+        <!-- <marquee behavior="scroll" direction="left"> -->
+    <div id = "formatDogs">
+      <img src="https://wsprung.github.io/whitneysArchive/website/assets/dogs.jpg" id = "dogs" alt="My dogs">
+      <p id = doggyP>These are my dogs Rusty and Ruggles! Rusty is a cockapoo, Ruggles is a
+        "cockapoo"...which means he is more of a mutt. Rusty got his name due to his color, and my dad
+        named him. Ruggles is named after the street my mom grew up on, and I named him. They are both around 10 years
+        old and I love them very much. However, Ruggles can be quite the menace.
+      </p>
+    </div>
+    <hr id = "hr1">
+
+    <p id = "zhuExcerpt"><span id = "reportCard">Report card comment excerpt from my 12th grade computer
+science teacher:</span>  “Your love for learning and programming
 is obvious, and you embody the hacker
 mindset (in the best way!). You tackle every
 problem I present to the class with absolute relish,
@@ -49,15 +59,6 @@ that you really want to understand how programs work. You are
 ambitious and creative in your programming projects...Keep
 up the exceptional work.”
 </p>
-        </blockquote>
-    <div id = "formatDogs">
-      <img src="https://wsprung.github.io/whitneysArchive/website/assets/dogs.jpg" id = "dogs" alt="My dogs">
-      <p id = doggyP>These are my dogs Rusty and Ruggles! Rusty is a cockapoo, Ruggles is a
-        "cockapoo"...which means he is more of a mutt. Rusty got his name due to his color, and my dad
-        named him. Ruggles is named after the street my mom grew up on, and I named him. They are both around 10 years
-        old and I love them very much. However, Ruggles can be quite the menace.
-      </p>
-    </div>
     </div>
 
     <div id = funFacts>
