--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -61,9 +61,8 @@
          </a>
         </td>
         <td>
-          <!-- <iframe src="https://docs.google.com/document/d/e/2PACX-1vTmHRtoPur65J76jAjdJNRHJ2ANLVTPNhMUHMEb5mzzW6EkJm3xvsjEei8Fk9HWmjFYSHuIC7sAxysk/pub?embedded=true"></iframe> -->
           <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png" id = "articleIcon3">
-          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/reportCardExcerpt.png" id = "reportCardExcerpt">
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/resumeIcon.png" id = "resumeIcon">
         </td>
         <td>
           <a href= "https://wsprung.github.io/whitneysArchive/website/myAccolades/alzheimersHackathon/alzheimersHackathon.html">
