Creates hoverable for flower icon

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -37,8 +37,9 @@
          </a>
         </td>
         <td>
-          <a href="https://www.flowerscleaningteam.net/" id = "flowerIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png">
+          <a href="https://www.flowerscleaningteam.net/">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersIcon.png" id = "flowerIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/flowersDescript.png" id = "flowerDescript">
          </a>
         </td>
         <!-- <td>
@@ -50,8 +51,6 @@
           <a href="" id = "awardIcon2">
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
          </a>
-         <!-- SIP certificate
-         Web Dev Certificate -->
         </td>
       </tr>
       <tr id = "row3">
@@ -61,8 +60,10 @@
          </a>
         </td>
         <td>
-          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png" id = "articleIcon3">
-          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/resumeIcon.png" id = "resumeIcon">
+          <a href= "https://wsprung.github.io/whitneysArchive/website/myAccolades/Resume/resume.html">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png" id = "articleIcon3">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/resumeIcon.png" id = "resumeIcon">
+          </a>
         </td>
         <td>
           <a href= "https://wsprung.github.io/whitneysArchive/website/myAccolades/alzheimersHackathon/alzheimersHackathon.html">
