--- a/website/index.html
+++ b/website/index.html
@@ -12,8 +12,8 @@
       <!-- add grades page, resume page, and "time capsule" page -->
        <input type = "button" id = "buttonDesign" onClick="parent.location='aboutMe/aboutMe.html'" value='About Me'>
        <input type = "button" id = "buttonDesign" onClick="parent.location='myWork/index.html'" value='My Work'>
-       <input type = "button" id = "buttonDesign" onClick="parent.location='myMusic/index.html'" value='My Music'>
-       <input type = "button" id = "buttonDesign" onClick="parent.location='myFood/index.html'" value='My Food'>
+       <!-- <input type = "button" id = "buttonDesign" onClick="parent.location='myMusic/index.html'" value='My Music'> -->
+       <input type = "button" id = "buttonDesign" onClick="parent.location='myFood/index.html'" value='Food & Recipes'>
        <input type = "button" id = "buttonDesign" onClick="parent.location='myAccolades/index.html'" value='Notable Achievements'>
     </div>
     <div id = "header">
