--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -32,9 +32,8 @@
       </tr>
       <tr id = "row2">
         <td>
-          <a href="" id = "awardBadgeIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardBadge.png">
-         </a>
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardBadge.png" id = "awardBadgeIcon">
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/apsDescript.png" id = "apsDescript">
         </td>
         <td>
           <a href="https://www.flowerscleaningteam.net/">
@@ -48,9 +47,8 @@
          </a>
         </td> -->
         <td>
-          <a href="" id = "awardIcon2">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png">
-         </a>
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hhrDescript.png" id = "hhrDescript">
         </td>
       </tr>
       <tr id = "row3">
