--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -75,6 +75,21 @@ up the exceptional work.”
       <hr id = "hr1">
     </div>
 
+    <div id = "piano">
+      <p id = "pianoDescript">
+        Click to see a video of me playing <strong>"Valse Sentimentale"</strong> by Franz Schubert. <br>I love this song, and played
+        it in a recital prior to COVID-19. What I love about classical <br>piano is that I feel it throughout my body. To me,
+        this song is very bittersweet. <br>Through the dimuendos and crescendos I experience the love story of my grandparents, with the final<br>
+        notes reminding me of my grandmother's last days. Nothing makes me feel like classical<br> piano does. To play with your emotions
+        is to play like the greats; when I began feeling<br> my emotions in every key, my skills heightened. I hope you enjoy
+        this song.
+      </p>
+      <video width="270" height="305.5" controls id = "pianoVid">
+        <source src="../assets/pianoClip.mov">
+          Your browser does not support the video tag.
+      </video>
+    </div>
+    <hr id = "hr1">
     <h3 id = "slideshowHeader">Click to see some more photos of me.</h3>
     <div id = "slideshowButtons">
       <input type = "button" id = "nextPic" onClick = slideShow("forward") value = '⬅' >
