Adjusts pianoPic size

--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -84,10 +84,13 @@ up the exceptional work.”
         is to play like the greats; when I began feeling<br> my emotions in every key, my skills heightened. I hope you enjoy
         this song.
       </p>
-      <video width="270" height="305.5" controls id = "pianoVid">
+      <a href="https://drive.google.com/file/d/1Nyp7Q89qZ69VMAcuqlwLlrKOY2eul3tX/view?usp=sharing">
+        <img src = "https://wsprung.github.io/whitneysArchive/website/assets/pianoPic.png" id = "pianoVid">
+     </a>
+      <!-- <video width="270" height="305.5" controls id = "pianoVid">
         <source src="../assets/pianoClip.mov">
           Your browser does not support the video tag.
-      </video>
+      </video> -->
     </div>
     <hr id = "hr1">
     <h3 id = "slideshowHeader">Click to see some more photos of me.</h3>
