--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -29,7 +29,7 @@
 
           I also enjoy a lot of familiar things. I love to immerse myself in natures and conversations. I find peace in music. My favorite food is sushi, however,
           I am not the best when it comes to rolling maki. I am better at cooking other foods, with my current favorite food to make being pulled pork. Academic topics
-          that captivate me include computer science, creative writing, 19th and 20th century European literature, calculus, and more.<br><br>
+          that captivate me include computer science, creative writing, economics, 19th and 20th century European literature, calculus, and more.<br><br>
 
           I have played piano for over a decade, and currently my favorite song to play
         is <strong>"Waltz in A Minor"</strong> by Frederic Chopin. I love to hang out with friends and enjoy time with
