--- a/website/aboutMe/aboutMe.html
+++ b/website/aboutMe/aboutMe.html
@@ -85,7 +85,7 @@ up the exceptional work.”
         this song.
       </p>
       <a href="https://drive.google.com/file/d/1Nyp7Q89qZ69VMAcuqlwLlrKOY2eul3tX/view?usp=sharing">
-        <img src = "https://wsprung.github.io/whitneysArchive/website/assets/pianoPic.png" id = "pianoVid">
+        <img src = "https://wsprung.github.io/whitneysArchive/website/assets/pianoPic.jpeg" id = "pianoVid">
      </a>
       <!-- <video width="270" height="305.5" controls id = "pianoVid">
         <source src="../assets/pianoClip.mov">
