Adds hoverable for SIP icon

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -46,15 +46,16 @@
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
          </a>
         </td> -->
-        <td>
+        <td id = "highHonorRoll">
           <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
           <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hhrDescript.png" id = "hhrDescript">
         </td>
       </tr>
       <tr id = "row3">
         <td>
-          <a href="https://wsprung.github.io/whitneysArchive/website/assets/sipCertificate.pdf" id = "sipIcon">
-            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/sipIcon.png">
+          <a href="https://wsprung.github.io/whitneysArchive/website/assets/sipCertificate.pdf">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/sipIcon.png" id = "sipIcon">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/assets/sipDescript.png" id = "sipDescript">
          </a>
         </td>
         <td>
