Fixes white overflow on myWork

--- a/website/myWork/index.html
+++ b/website/myWork/index.html
@@ -73,7 +73,7 @@
         </td>
         <td>
           <!-- <a href=""> -->
-            <img src = "https://wsprung.github.io/whitneysArchive/website/myWork/assets/checkBackIcon.png">
+            <img src = "https://wsprung.github.io/whitneysArchive/website/myWork/assets/checkBackIcon.png" id = "checkBack">
          <!-- </a> -->
         </td>
       </tr>
