Adds CLDescript and CL icon in myAccolades

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -73,6 +73,12 @@
          Web Dev Certificate -->
         </td>
       </tr>
+      <tr id = "row4">
+        <td>
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "CLIcon">
+          <!-- <img src = "https://wsprung.github.io/whitneysArchive/website/assets/apsDescript.png" id = "CLDescript"> -->
+        </td>
+      </tr>
     </table>
   </div>
 </body></html>
