Updates CLDescript and reorganizes awards shelf

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -46,9 +46,9 @@
             <img src = "https://wsprung.github.io/whitneysArchive/website/assets/articleIcon3.png">
          </a>
         </td> -->
-        <td id = "highHonorRoll">
-          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
-          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hhrDescript.png" id = "hhrDescript">
+        <td>
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "cLIcon">
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/CLDescript.png" id = "cLDescript">
         </td>
       </tr>
       <tr id = "row3">
@@ -75,8 +75,8 @@
       </tr>
       <tr id = "row4">
         <td>
-          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "CLIcon">
-          <!-- <img src = "https://wsprung.github.io/whitneysArchive/website/assets/apsDescript.png" id = "CLDescript"> -->
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
+          <!-- <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hhrDescript.png" id = "hhrDescript">  -->
         </td>
       </tr>
     </table>
