Fixes hhr descript bug

--- a/website/myAccolades/index.html
+++ b/website/myAccolades/index.html
@@ -76,7 +76,7 @@
       <tr id = "row4">
         <td>
           <img src = "https://wsprung.github.io/whitneysArchive/website/assets/awardIcon2.png" id = "awardIcon2">
-          <!-- <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hhrDescript.png" id = "hhrDescript">  -->
+          <img src = "https://wsprung.github.io/whitneysArchive/website/assets/hhrDescript.png" id = "hhrDescript">
         </td>
       </tr>
     </table>
